----- cvs ci ------
Sun Aug 20 10:00:00 CET 2000
oliver grimm ():
* fix problems compiling smapi on 'newer' linux-systems
* add -DHAS_SEMUN in huskymak.cfg for older systems, witch has "union semun"
* fix broken SquishDeleteBase()

----- cvs ci ------
Sun Aug 13 21:25:00 CET 2000
oliver grimm ():
* remove api_sq.* (MSGAPI 0)
* add sq_*.* (MSGAPI 2)
* add function GetHash()
* add function GetNextUid()
* tested under BeOS
* compiled under linux & BeOS
*******************************************
* COMPLETE REFRESH OF THE SQUISH-CODE           *
* COULD BE UNSTABLE                                              *
*******************************************

----- cvs ci ------
Sun Aug 13 10:18:23 CET 2000
oliver grimm ():
* found locking Bug
* added open-area list (squish only))
* added open-message list for each area (squish only)
* when closing an squish-area all messages will be closed 
* MsgCloseApi() closes all open squish-areas
* simple multithreading support added

smapi 1.6.4
-----------
(released on Mon May 22 14:58:56 CEST 2000)

----- cvs ci ------
Mon Jul 31 12:18:23 NOVST 2000
max (patches from Pavel Gulchouk):
* MsgDeleteBase() functions

----- cvs ci ------
Tue Jul 25 22:09:07 NOVST 2000
max (patches from Pavel Gulchouk):
* jam @Via fixes

----- cvs ci ------
Thu Jul 13 19:22:30 NOVST 2000
max (patches from Pavel Gulchouk):
* jam readsubfiled() fixes

----- cvs ci ------
Thu Jun 29 21:39:49 NOVST 2000
max (patches from Pavel Gulchouk):
* time fixes in jam area
* write intl kludges only for netmail areas (jam)

----- cvs ci ------
Tue Jun 27 22:54:18 NOVST 2000
max:
* JAM optimization: removed many strlen()

----- cvs ci ------
Mon May 22 14:58:56 CEST 2000
mtt:
* changed version number to 1.6.4

----- cvs ci ------
Mon May 22 11:40:00 NOVST 2000
max (patch from Alex Bronin):
* fix to use stat() with Watcom & MSVC

----- cvs ci ------
Mon May  8 17:40:14 NOVST 2000
max (patch from Alex Bronin):
* MS Visual C porting

----- cvs ci ------